...
                android:id="@+id/shareFileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/standard_half_margin"
                android:layout_marginStart="4dp"
                android:layout_toEndOf="@+id/shareFileIcon"
                android:layout_toStartOf="@+id/getPrivateLinkButton"
                android:ellipsize="middle"
                android:singleLine="true"
                android:text="@string/placeholder_filename"
                android:textColor="?attr/colorPrimary"
                android:textSize="16sp" />

...
            <ImageButton
                android:id="@+id/getPrivateLinkButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/standard_half_padding"
                android:src="@drawable/copy_link"
                android:scaleType="centerCrop"
                android:background="@color/transparent"
                android:contentDescription="@string/content_description_get_private_link" />

        </RelativeLayout>

...
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:accessibilityHeading="true"/>

                <ImageButton
                    android:id="@+id/addPublicLinkButton"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:background="@color/transparent"
                    android:src="@drawable/ic_add"
                    android:contentDescription="@string/content_description_add_public_link" />
...
                android:layout_height="0dip"
                android:layout_weight="1"
                android:scrollbars="vertical"
                android:visibility="gone" />

            <TextView
                android:id="@+id/shareNoPublicLinks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/standard_padding"
                android:paddingStart="@dimen/standard_half_padding"
                android:paddingTop="@dimen/standard_padding"
                android:text="@string/share_no_public_links"
...
