...
            android:singleLine="true"
            android:text="@string/username"
            android:textColor="@color/textColor"
            android:textSize="@dimen/two_line_primary_text_size" />

        <ImageButton
            android:id="@+id/getPublicLinkButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:padding="14dp"
            android:src="@drawable/copy_link"
            android:scaleType="centerCrop"
...
            android:padding="14dp"
            android:src="@drawable/ic_action_delete_grey"
            android:scaleType="centerCrop"
            android:background="@color/transparent" />

        <ImageButton
            android:id="@+id/editPublicLinkButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center_vertical"
            android:padding="14dp"
            android:src="@drawable/ic_lead_pencil_grey"
            android:background="@color/transparent" />
...
